--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ input[type="text"] {
   border: 1px solid #ddd;
   border-radius: 5px 0 0 5px;
   font-family: monospace;
+  outline: none;
 }
 
 button {
